# crm-pilates

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  api.py  classroom_creation.py  conftest.py  docker-compose.yml  install-virtualenv.sh  log-config.json  main.py  pyproject.toml  requirements.txt  run.sh  settings.ini  settings.py  setup.cfg  start.sh  test_main.py
.do/: app.yaml  crm-pilates.yaml
.github/workflows/: python-app.yml
adr/: 20210609_inject_repositories_in_aggregate_root.md  20210630_use_ES_CQRS_architecture.md  20210630_use_command_pattern.md  README.md
command/: command.py  command_bus.py  command_handler.py  response.py  saga_handler.py
command/tests/: test_command_bus.py
crm_pilates/: api.py  app.py  main.py  settings.py
crm_pilates/authenticating/: authenticating_user.py  authentication.py
crm_pilates/command/: command_bus.py  command_handler.py  response.py  saga_handler.py
crm_pilates/domain/: commands.py  email_notifier.py  exceptions.py  repository.py  sagas.py  services.py
crm_pilates/event/: event_bus.py  event_store.py  event_subscribers.py
crm_pilates/infrastructure/: command_bus_provider.py  event_bus_provider.py  event_to_domain_loader.py  repositories.py  repository_provider.py  services.py
domain/: classroom.py  classroom_repository.py  commands.py  datetimes.py  exceptions.py  repository.py  sagas.py
domain/classroom/: attendee.py  attendee_repository.py  classroom.py  classroom_command_handler.py  classroom_creation_command_handler.py  classroom_patch_command_handler.py  classroom_repository.py  classroom_type.py  commands.py  date_time_comparator.py  duration.py  next_sessions_command_handler.py  session_checkin_saga_handler.py  session_checkout_command_handler.py  session_creation_command_handler.py  session_in_range_command_handler.py  session_repository.py
domain/client/: client.py  client_command_handler.py  client_command_handlers.py  client_repository.py
domain/session/: next_sessions_command_handler.py  session.py
domain/tests/: test_classroom.py
domains/classes/: commands.py
domains/client/: client.py  client_command_handler.py  client_repository.py  commands.py
event/: event_bus.py  event_store.py  event_subscribers.py
infrastructure/: command_bus_provider.py  event_bus_provider.py  event_to_domain_loader.py  providers.py  repository_provider.py
infrastructure/event/: __init__.py  event_store.py
infrastructure/migration/: migration.py
scripts/: coverage.sh  create_database.py
scripts/ansible/: deploy.yml  (+4 more)
tests/: conftest.py  docker-compose.yml
(+234 files in other folders)
